--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="main.js" type="text/javascript"></script>
     <script src="Viewport.js" type="text/javascript"></script>
     <script src="Entity.js" type="text/javascript"></script>
+    <script src="Planet.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
